[gd_scene load_steps=15 format=2]

[ext_resource path="res://ObstacleCourse_Part2/assets/shadow_circle.png" type="Texture" id=1]
[ext_resource path="res://ObstacleCourse_Part2/assets/godot.png" type="Texture" id=2]
[ext_resource path="res://ObstacleCourse_Part2/Godot.gd" type="Script" id=3]
[ext_resource path="res://ObstacleCourse_Part2/assets/smoke.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 30.0

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "hover"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -5 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "ghost"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.419608 ) ]
}

[sub_resource type="CircleShape2D" id=5]
radius = 29.0

[sub_resource type="Gradient" id=6]
offsets = PoolRealArray( 0, 0.148594, 0.558233, 1 )
colors = PoolColorArray( 0.886275, 0.854902, 0.854902, 0, 0.83252, 0.783727, 0.783727, 1, 0.762207, 0.714744, 0.714744, 0.966981, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=7]
gradient = SubResource( 6 )

[sub_resource type="Curve" id=8]
_data = [ Vector2( 0, 0.167045 ), 0.0, 0.0, 0, 0, Vector2( 0.242647, 0.839773 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.176136 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=9]
curve = SubResource( 8 )

[sub_resource type="ParticlesMaterial" id=10]
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
gravity = Vector3( 0, 0, 0 )
initial_velocity = 136.36
initial_velocity_random = 0.21
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 73.65
damping_random = 0.17
scale = 0.5
scale_random = 0.35
scale_curve = SubResource( 9 )
color_ramp = SubResource( 7 )

[node name="Godot" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 3 )

[node name="Shadow" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.356863 )
texture = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
offset = Vector2( 0, -61 )
hframes = 3
vframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -30 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "hover"
anims/RESET = SubResource( 2 )
anims/hover = SubResource( 3 )

[node name="TimerGhost" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="AnimationPlayerGhost" type="AnimationPlayer" parent="."]
anims/ghost = SubResource( 4 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -30 )
shape = SubResource( 5 )

[node name="SmokeParticle" type="Particles2D" parent="."]
show_behind_parent = true
amount = 20
local_coords = false
process_material = SubResource( 10 )
texture = ExtResource( 4 )
